--- a/css/main.css
+++ b/css/main.css
@@ -62,6 +62,11 @@ header .header-right .btn-exit span{
     border: 1px solid #272b38;
     background: #333747;
     cursor: pointer;
+  } 
+  .home .main nav ul li a:hover{
+    color: #fff;
+    background: transparent;
+    text-decoration: underline;
   }
   .home .main nav ul li .u-icon{
     display: inline-block;
@@ -84,6 +89,7 @@ header .header-right .btn-exit span{
   }
 
   .home .main .box .view{
+    display: none;
     height: 100%;
     padding: 10px 10px;
 }
