--- a/css/main.css
+++ b/css/main.css
@@ -58,13 +58,14 @@ header .header-right .btn-exit span{
     display: flex;
     align-items: center;
     font: 16px '宋体';
-    color: #fff;
     border: 1px solid #272b38;
     background: #333747;
     cursor: pointer;
-  } 
+  }
+  .home .main nav ul .user-manager a{
+    color:#fff;
+  }
   .home .main nav ul li a:hover{
-    color: #fff;
     background: transparent;
     text-decoration: underline;
   }
@@ -88,10 +89,15 @@ header .header-right .btn-exit span{
     background: #eaedf1;
   }
 
-  .home .main .box .view{
-    display: none;
+.home .main .box .view{
+    display: block;
     height: 100%;
     padding: 10px 10px;
+}
+.home .main .box .view2{
+  display: none;
+  height: 100%;
+  padding: 10px 10px;
 }
 
 
