--- a/css/book.css
+++ b/css/book.css
@@ -30,7 +30,7 @@
 
  .home .main .box .view2 .page button{
     color:#fff;
-    font: 400;
+    font-weight: 400;
     padding: 0 10px;
     cursor: pointer;
     background-color: #337Ab7;
