--- a/css/user.css
+++ b/css/user.css
@@ -24,7 +24,7 @@
 }
 .home .main .box .view .page button{
     color:#fff;
-    font: 400;
+    font-weight: 400;
     padding: 0 10px;
     cursor: pointer;
     background-color: #337Ab7;
